// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedHeader renders the ConnectedHeader component 1`] = `
Object {
  "children": Array [
    <nav
      className="navbar navbar-expand-md navbar-light bg-light"
    >
      <Link
        className="navbar-brand"
        replace={false}
        to="/"
      >
        <img
          alt="Reveal"
          src="logo.png"
        />
      </Link>
    </nav>,
    <NavbarToggler
      onClick={[Function]}
      tag="button"
      type="button"
    />,
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="mr-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="nav-link active"
            to="/"
          >
            Home
          </NavLink>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="nav-link"
            color="secondary"
            nav={true}
          >
            Planning
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                className="nav-link"
                to="/intervention/irs"
              >
                IRS
              </NavLink>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="nav-link"
            color="secondary"
            nav={true}
          >
            Reporting
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="nav-link"
                  to="/focus-investigation"
                >
                  Focus Investigation
                </NavLink>
              </DropdownItem>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="nav-link"
                  to="/focus-investigation/historical"
                >
                  Historical FI
                </NavLink>
              </DropdownItem>
            </div>
          </DropdownMenu>
        </UncontrolledDropdown>
        <NavItem
          tag="li"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="nav-link"
            to="/404"
          >
            Users
          </NavLink>
        </NavItem>
        <NavItem
          tag="li"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="nav-link"
            to="/404"
          >
            About
          </NavLink>
        </NavItem>
      </Nav>
      <Nav
        className="ml-0"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          className="nav-link"
          to="/login"
        >
          Login
        </NavLink>
      </Nav>
    </Collapse>,
  ],
  "color": "light",
  "expand": "md",
  "light": true,
  "tag": "nav",
}
`;

exports[`components/ConnectedHeader renders the ConnectedHeader when logged in 1`] = `
Object {
  "children": Array [
    <nav
      className="navbar navbar-expand-md navbar-light bg-light"
    >
      <Link
        className="navbar-brand"
        replace={false}
        to="/"
      >
        <img
          alt="Reveal"
          src="logo.png"
        />
      </Link>
    </nav>,
    <NavbarToggler
      onClick={[Function]}
      tag="button"
      type="button"
    />,
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="mr-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="nav-link active"
            to="/"
          >
            Home
          </NavLink>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="nav-link"
            color="secondary"
            nav={true}
          >
            Planning
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                className="nav-link"
                to="/intervention/irs"
              >
                IRS
              </NavLink>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="nav-link"
            color="secondary"
            nav={true}
          >
            Reporting
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <div>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="nav-link"
                  to="/focus-investigation"
                >
                  Focus Investigation
                </NavLink>
              </DropdownItem>
              <DropdownItem
                tag="button"
                toggle={true}
              >
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="nav-link"
                  to="/focus-investigation/historical"
                >
                  Historical FI
                </NavLink>
              </DropdownItem>
            </div>
          </DropdownMenu>
        </UncontrolledDropdown>
        <NavItem
          tag="li"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="nav-link"
            to="/404"
          >
            Users
          </NavLink>
        </NavItem>
        <NavItem
          tag="li"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="nav-link"
            to="/404"
          >
            About
          </NavLink>
        </NavItem>
      </Nav>
      <Nav
        className="ml-0"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            color="secondary"
            nav={true}
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Array [
                  "far",
                  "user",
                ]
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
             
            RobertBaratheon
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                className="nav-link"
                to="/logout"
              >
                Sign Out
              </NavLink>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
      </Nav>
    </Collapse>,
  ],
  "color": "light",
  "expand": "md",
  "light": true,
  "tag": "nav",
}
`;
